@@ -292,7 +292,7 @@ class StandaloneHTMLBuilder(Builder):
         # typically doesn't include the time of day
         lufmt = self.config.html_last_updated_fmt
         if lufmt is not None:
-            self.last_updated = format_date(lufmt or _('MMM dd, YYYY'),
+            self.last_updated = format_date(lufmt or _('%b %d, %Y'),
                                             language=self.config.language,
                                             warn=self.warn)
         else:
